# foxtrot

./: CMakeLists.txt  README.md  project-settings.json
assets/: scene.json  sprites.json
assets/animations/: bullet_small.xbundle  dante_death.json  dante_death.xbundle  dante_fall.json  dante_fall.xbundle  dante_idle.json  dante_idle.xbundle  dante_idle_low.json  dante_idle_low.xbundle  dante_run.json  dante_run.xbundle  dante_run_low.json  dante_run_low.xbundle  gatling_fire.json  gatling_fire_unloaded.json  john_idle.json  john_idle.xbundle  john_run.xbundle  muzzle_a.json  muzzle_a.xbundle  slime_idle.json  slime_idle.xbundle  slime_move.json  slime_move.xbundle
assets/colliders/: boundscollider.json  gunshopcollider.xbundle  playercollider.xbundle
assets/images/: bullet.ase  foxtrot_mainchar.ase  foxtrot_mainchar_idle.ase  foxtrot_mainchar_run.ase  foxtrot_slime_attack.ase  foxtrot_slime_move.ase  gatling_fire.ase
assets/scenes/: launcherscene.json  level_0.json  level_0.xscene  menu.json  menu.xscene
assets/sprites/: backdrop.json  backdrop_night.json  bullet_small.json  button_a.json  button_a_hover.xbundle  button_a_pressed.xbundle  button_b.json  button_b_hover.json  button_b_pressed.json  celltile.json  crosshair.json  crosshair_duplex.json  crosshair_fine.json  crosshair_german.json  dante_death.json  dante_fall.json  dante_idle.json  dante_idle_1.xbundle  dante_idle_2.xbundle  dante_idle_3.json  dante_idle_low.json  dante_idle_low_1.json  dante_idle_low_2.xbundle  dante_idle_low_3.json  dante_run.json  dante_run_1.json  dante_run_1.xbundle  dante_run_2.json  dante_run_2.xbundle  dante_run_3.json  dante_run_4.json  dante_run_5.json  dante_run_6.json  dante_run_7.json  dante_run_low.json  dante_run_low_1.xbundle  dante_run_low_2.json  dante_run_low_3.json  dante_run_low_4.json  dante_run_low_5.json  (+40 more)
libresprite/: ammo_box.ase  bank.ase  barrel.ase  blood.ase  bullet_small.ase  button_a.ase  button_b.ase  celltile.ase  chainsaw.ase  cloud_0.ase  cloud_1.ase  crosshair.ase  currency.ase  dante.ase  explosion.ase  gatling.ase  grenade.ase  gunshop.ase  inventory.ase  john.ase  john_idle.ase  john_run.ase  katana.ase  monster.ase  muzzle_a.ase  pistol.ase  revolver.ase  shotgun.ase  shotgunshell.ase  shrapnell.ase  spider.ase  toolbar.ase
plugin/: plugin.cpp
src/: account.hpp  console.hpp  consolecommand.hpp  consoleparser.hpp  consoleprinter.hpp  foxtrot.hpp  foxtrotscene.hpp  gatling.hpp  inventory.hpp  item.cpp  item.hpp  level.hpp  levelloader.hpp  levelname.hpp  main.cpp  pistol.hpp  player.hpp  scenemanager.hpp  weapon.hpp
src/bullets/: smallbullet.hpp
src/components/: backdropcomponent.hpp  bulletcomponent.hpp  charactercontrollercomponent.hpp  floorcomponent.hpp  fpscomponent.hpp  healthcomponent.hpp  inputcomponent.hpp  jumpresetcomponent.hpp  muzzleflashcomponent.hpp  npccomponent.hpp  playercomponent.hpp  playercontrollercomponent.hpp
src/console/: console.hpp  consolecommand.hpp  consoleoutput.hpp  consoleparser.hpp
src/events/: loadlevelevent.hpp
src/levels/: level0.hpp  mainmenu.hpp
src/systems/: bulletsystem.hpp  camerasystem.hpp  cursorsystem.hpp  (+7 more)
(+5 files in other folders)
